--- a/text_process.ipynb
+++ b/text_process.ipynb
@@ -128,38 +128,7 @@
     "    \n",
     "if __name__ == \"__main__\":    \n",
     "#     vectorizer('train.csv')\n",
-    "    NBClf()\n",
-    "#     test_percents = np.arange(0.05, 0.30, 0.05)\n",
-    "#     accuracies = []\n",
-    "#     profiles_predicted = []\n",
-    "#     for p in test_percents:\n",
-    "#         clf, n_features, acc = NBClf(p)\n",
-    "# #         print(clf, n_features, acc)\n",
-    "#         accuracies.append(acc)\n",
-    "# #         test = vectorizeText(clf, n_features)\n",
-    "# #         y_pred = clf.predict( test )\n",
-    "#         possible_profile = classifyConversation(clf, 21)\n",
-    "#         profiles_predicted.append(possible_profile)\n",
-    "#         print()\n",
-    "#         print(\"PORCENTAJE DE PRUEBA: \", p * 100)\n",
-    "#         print(\"EXACTITUD: \", acc)\n",
-    "#         print(\"POSIBLE PERFIL DE CONVERSACION: {0}\".format(possible_profile))\n",
-    "#         print()\n",
-    "#         print()\n",
-    "\n",
-    "#     fig = plt.figure()\n",
-    "#     ax = fig.add_subplot(111)\n",
-    "#     test_percentage = test_percents * 100 \n",
-    "#     ax.plot(test_percentage, accuracies, marker='o')\n",
-    "#     plt.title('Prueba de exactitud del clasificador Naive Bayes en dataset de perfiles de personas\\n\\n\\n')\n",
-    "#     plt.xlabel('Tamaño del test (%)')\n",
-    "#     plt.ylabel('Exactitud del modelo')\n",
-    "#     for i, profile in enumerate(profiles_predicted):\n",
-    "#         ax.annotate(profile,\n",
-    "#                      xy=(test_percentage[i], accuracies[i] ),\n",
-    "#                      xytext=(test_percentage[i], accuracies[i] + 0.01 )\n",
-    "#                     )\n",
-    "#     plt.show()"
+    "    NBClf()\n"
    ]
   },
   {
